# landing-zone-propeller

./: .editorconfig  .gitignore  .prettierrc  NOTICE  README.md  justfile  propeller.yaml
.github/workflows/: ci.yml  dev-build-cleanup.yml  dev-build.yml  release.yml
.kiro/steering/: llm-wiki.md
autopilot/: README.md  biome.json  justfile  package.json  pnpm-lock.yaml  project.yaml  tsconfig.json  tsdown.config.ts
autopilot/lambda/: buildspec.yml  handler.py
autopilot/src/: constants.ts  handler.test.ts  handler.ts  types.ts
autopilot/terraform/: lambda.tf  outputs.tf  providers.tf  variables.tf  versions.tf
bootstrap/: README.md
bootstrap/cloudformation/: bootstrap.yaml  deploy-runner.yaml
bootstrap/scripts/: create-landing-zone-propeller-sfn.sh  create-operation-account.sh  create-operations-account.sh  create-portfolio.sh  (+9 more)
codebuild/: buildspec.yml
consumer/: init.sh  justfile
docs/: README.md  base-sso-setup.md  ci-setup.md  concepts.md  consumer-ci.md  consumer-guide.md  consumer-setup.md  customization.md  getting-started.md  glossary.md  pipeline-schema.md  platforms.md  project-structure.md
engine/: README.md  pyproject.toml
engine/propeller_engine/bundle/: __init__.py  assembler.py
engine/propeller_engine/cli/: bundle.py  deploy.py  resolve.py  validate.py
engine/propeller_engine/deploy/: __init__.py  cloudformation.py  runner.py  script.py  terraform.py
engine/propeller_engine/models/: __init__.py  config.py  pipeline.py
engine/propeller_engine/pipeline/: __init__.py  resolve.py  validate.py
landing-zone/: propeller.yaml
(+362 files in other folders)
